Fix CSS alignment bugs and add more templates (#106)

--- a/vizro-core/src/vizro/static/css/layout.css
+++ b/vizro-core/src/vizro/static/css/layout.css
@@ -11,8 +11,7 @@
   display: flex;
   flex: 0 0 auto;
   flex-direction: column;
-  padding: 30px 32px 0 32px;
-  scrollbar-gutter: stable;
+  padding: 40px 32px 0 32px;
   width: 352px;
   overflow: auto;
   gap: var(--spacing-04);
@@ -58,7 +57,7 @@
   display: flex;
   flex-direction: column;
   gap: var(--spacing-06);
-  padding: 0 0 24px 0;
+  padding: 4px 0 24px 0;
 }
 
 .page_error_container {
@@ -87,12 +86,8 @@
   width: 336px;
 }
 
-hr {
-  border-bottom: 1px solid var(--border-subtle-alpha-01);
-  width: 100%;
-}
-
 .dashboard_title_outer {
+  display: flex;
+  flex-direction: column;
   width: 100%;
-  height: 32px;
 }
